--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,12 @@
 [build]
-builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile"
+builder = "dockerfile"
 
 [deploy]
 healthcheckPath = "/"
 healthcheckTimeout = 300
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 3
 
 [env]
-PORT = "8000"
+PORT = { default = "8000" }
 PYTHONPATH = "/app"
