--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,23 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-decouple==3.8
-sqlalchemy==2.0.23
-alembic==1.12.1
-psycopg2-binary==2.9.9
-redis==5.0.1
-celery==5.3.4
-boto3==1.34.0
-pillow==10.1.0
-opencv-python-headless==4.8.1.78
-tensorflow==2.15.0
-scikit-learn==1.3.2
-pandas==2.1.4
-numpy==1.24.3
-requests==2.31.0
-aiofiles==23.2.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+email-validator==2.1.0
 jinja2==3.1.2
+aiofiles==23.2.1
+pillow==10.1.0
+geopy==2.4.0
+tensorflow==2.15.0
+numpy==1.24.3
+opencv-python-headless==4.8.1.78
+scikit-learn==1.3.2
+requests==2.31.0
 python-dotenv==1.0.0
-pydantic[email]==2.5.0
-httpx==0.25.2
-google-auth==2.25.2
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.2.0
 starlette==0.27.0
+argon2-cffi==23.1.0
