--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,15 @@ python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-decouple==3.8
-pydantic==2.5.0
-pydantic-settings==2.1.0
 email-validator==2.1.0
 jinja2==3.1.2
 aiofiles==23.2.1
 pillow==10.1.0
-geopy==2.4.0
-tensorflow==2.15.0
-numpy==1.24.3
 opencv-python-headless==4.8.1.78
+numpy==1.24.3
 scikit-learn==1.3.2
+tensorflow==2.15.0
 requests==2.31.0
-python-dotenv==1.0.0
+httpx==0.25.2
+pydantic==2.5.0
 starlette==0.27.0
-argon2-cffi==23.1.0
