--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,58 @@
+# Core FastAPI and web framework
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
+python-multipart==0.0.6
+
+# Database
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-decouple==3.8
-email-validator==2.1.0
-jinja2==3.1.2
-aiofiles==23.2.1
-pillow==10.1.0
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
-scikit-learn==1.3.2
-tensorflow==2.15.0
-requests==2.31.0
-httpx==0.25.2
+
+# Authentication and Security
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.1.2
+
+# Data validation and settings
 pydantic==2.5.0
-starlette==0.27.0
+pydantic-settings==2.1.0
+email-validator==2.1.0
+
+# Environment and configuration
+python-dotenv==1.0.0
+python-decouple==3.8
+
+# Email functionality
+fastapi-mail==1.4.1
+
+# File handling and async operations
+aiofiles==23.2.1
+
+# Image processing
+pillow==10.1.0
+
+# Google OAuth and authentication
+google-auth==2.25.2
+google-auth-oauthlib==1.1.0
+authlib==1.2.1
+
+# HTTP client and utilities
+httpx==0.25.2
+requests==2.31.0
+
+# Geospatial calculations
+geopy==2.4.1
+
+# Template engine
+jinja2==3.1.2
+
+# Security utilities
+itsdangerous==2.1.2
+
+# Date and time utilities
+python-dateutil==2.8.2
+
+# JSON Web Tokens
+pyjwt==2.8.0
+
+# Additional utilities
+typing-extensions==4.8.0
