--- a/requirements.txt
+++ b/requirements.txt
@@ -35,8 +35,8 @@ google-auth==2.25.2
 google-auth-oauthlib==1.1.0
 authlib==1.2.1
 
-# HTTP client and utilities
-httpx==0.25.2
+# HTTP client and utilities - Fixed version for supabase compatibility
+httpx==0.24.1
 requests==2.31.0
 
 # Geospatial calculations
@@ -57,6 +57,6 @@ pyjwt==2.8.0
 # Additional utilities
 typing-extensions==4.8.0
 
-# Supabase and Postgrest
+# Supabase and Postgrest - Fixed versions
 supabase==2.3.0
 postgrest==0.13.0
