--- a/requirements.txt
+++ b/requirements.txt
@@ -60,3 +60,8 @@ typing-extensions==4.8.0
 # Supabase and Postgrest - Fixed versions
 supabase==2.3.0
 postgrest==0.13.0
+
+# Machine Learning - Add torch for AI features
+torch==2.1.0
+torchvision==0.16.0
+numpy==1.24.3
