--- a/requirements.txt
+++ b/requirements.txt
@@ -19,14 +19,12 @@ email-validator==2.1.0
 
 # Environment and configuration
 python-dotenv==1.0.0
-python-decouple==3.8
 
 # File handling and async operations
 aiofiles==23.2.1
 
-# HTTP client and utilities
+# HTTP client
 httpx==0.24.1
-requests==2.31.0
 
 # Template engine
 jinja2==3.1.2
@@ -43,7 +41,7 @@ pyjwt==2.8.0
 # Additional utilities
 typing-extensions==4.8.0
 
-# Supabase
+# Supabase client
 supabase==2.3.0
 
 # Machine Learning - Add torch for AI features
