--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ typing-extensions==4.8.0
 supabase==2.3.0
 
 # Machine Learning - Add torch for AI features
+tensorflow-cpu==2.12.0
 
 numpy==1.24.3
 
