--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,8 @@ pillow==10.1.0
 # Postgrest - Fixed version
 postgrest==0.13.0
 
-
+supabase==2.3.1 
+gotrue==0.7.6
 
 # # FOR TORCH SERVICE CODE!!!
 # # Core FastAPI and web framework
