--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,9 @@ python-dotenv==1.0.0
 aiofiles==23.2.1
 
 # HTTP client
-httpx==0.24.1
+# httpx==0.24.1
+httpx==0.25.2
+
 
 # Template engine
 jinja2==3.1.2
@@ -47,7 +49,7 @@ pyjwt==2.8.0
 typing-extensions==4.8.0
 
 # Supabase client
-supabase==2.3.0
+# supabase==2.3.0
 
 # Machine Learning - Add torch for AI features
 
@@ -72,6 +74,7 @@ postgrest==0.13.0
 
 supabase==2.3.1 
 gotrue==0.7.6
+storage-py==0.7.0
 
 # # FOR TORCH SERVICE CODE!!!
 # # Core FastAPI and web framework
