--- a/requirements.txt
+++ b/requirements.txt
@@ -211,7 +211,7 @@ pillow==10.1.0
 # supabase==2.3.0
 
 # # Machine Learning - Add torch for AI features
-# torch==2.6.0
+torch==2.6.0
 # numpy==1.24.3
 
 # # Google OAuth and authentication
