--- a/requirements.txt
+++ b/requirements.txt
@@ -158,11 +158,36 @@ geopy==2.4.1
 fastapi-mail==1.4.1
 
 # Image processing
-pillow==10.1.0
+# pillow==10.1.0
 # torch==2.0.1
-torchvision==0.15.2  # Matches torch 2.0.1
-torch==1.13.1
-ultralytics==8.0.196  # Latest version compatible with torch 2.0.x
+# torchvision==0.15.2  # Matches torch 2.0.1
+# torch==1.13.1
+# ultralytics==8.0.196  # Latest version compatible with torch 2.0.x
+
+# Image processing (COMPATIBLE SET)
+pillow==10.1.0
+torch==1.13.1  # Critical for YOLOv5 compatibility
+torchvision==0.14.1  # Matches torch 1.13.1
+ultralytics==8.0.196  # Use older compatible version
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 # # FOR TORCH SERVICE CODE!!!
